--- a/templates/pharmacy/pharmacy_index.html
+++ b/templates/pharmacy/pharmacy_index.html
@@ -112,21 +112,21 @@
 
 <!--  ==================== DISCOUNT ===================  -->
 
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="#discount" aria-expanded="false"
-                       aria-controls="discount">
-                        <i class="fas fa-tags menu-icon"></i>
-                        <span class="menu-title">Discount</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="discount">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="/pharmacy_view_discount">View</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/pharmacy_add_discount">Add</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/pharmacy_view_other_discount">Others</a></li>
-                        </ul>
-                    </div>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" data-toggle="collapse" href="#discount" aria-expanded="false"#}
+{#                       aria-controls="discount">#}
+{#                        <i class="fas fa-tags menu-icon"></i>#}
+{#                        <span class="menu-title">Discount</span>#}
+{#                        <i class="menu-arrow"></i>#}
+{#                    </a>#}
+{#                    <div class="collapse" id="discount">#}
+{#                        <ul class="nav flex-column sub-menu">#}
+{#                            <li class="nav-item"><a class="nav-link" href="/pharmacy_view_discount">View</a></li>#}
+{#                            <li class="nav-item"><a class="nav-link" href="/pharmacy_add_discount">Add</a></li>#}
+{#                            <li class="nav-item"><a class="nav-link" href="/pharmacy_view_other_discount">Others</a></li>#}
+{#                        </ul>#}
+{#                    </div>#}
+{#                </li>#}
 
 <!--  ==================== VIEW SALESREPORT ===================  -->
 
