--- a/templates/pharmacy/pharmacy_signup.html
+++ b/templates/pharmacy/pharmacy_signup.html
@@ -46,28 +46,28 @@
 
                                 <div class="form-group">
                                     <input type="text" name="name" id="name" class="form-control form-control-lg"
-                                           placeholder="Pharmacy Name">
+                                           placeholder="Pharmacy Name" required>
                                 </div>
 
                                 <div class="form-group">
-                                    <input type="text" name="email" id="email" class="form-control form-control-lg"
-                                           placeholder="Email"></div>
+                                    <input type="email" name="email" id="email" class="form-control form-control-lg"
+                                           placeholder="Email" required></div>
                                 <div class="form-group">
                                     <input type="text" name="contact" id="contact" class="form-control form-control-lg"
-                                           placeholder="Contact"></div>
+                                           placeholder="Contact" maxlength="10" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="place" id="place" class="form-control form-control-lg"
-                                           placeholder="Place"></div>
+                                           placeholder="Place" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="post" id="post" class="form-control form-control-lg"
-                                           placeholder="Post"></div>
+                                           placeholder="Post" required></div>
                                 <div class="form-group">
 
-                                    <select name="district" id="district" class="form-control">
+                                    <select name="district" id="district" class="form-control" required>
                                         <option selected>Select</option>
                                         <option>Alappuzha</option>
                                         <option>Ernakulam</option>
@@ -88,32 +88,32 @@
 
                                 <div class="form-group">
                                     <input type="number" name="pin" id="pin" class="form-control form-control-lg"
-                                           placeholder="Pin"></div>
+                                           placeholder="Pin" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="license" id="license" class="form-control form-control-lg"
-                                           placeholder="License Number"></div>
+                                           placeholder="License Number" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="lat" id="lat" class="form-control form-control-lg"
-                                           placeholder="Latitude"></div>
+                                           placeholder="Latitude" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="lon" id="lon" class="form-control form-control-lg"
-                                           placeholder="Longitude"></div>
+                                           placeholder="Longitude" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="p1" class="form-control form-control-lg"
-                                           placeholder="Password"></div>
+                                           placeholder="Password" required></div>
 
 
                                 <div class="form-group">
                                     <input type="text" name="p2" class="form-control form-control-lg"
-                                           placeholder="Confirm Passsword">
+                                           placeholder="Confirm Passsword" required>
                                 </div>
                                 <input type="submit" name="sign" id="sign" value="SignUp"
                                        class="btn-block btn btn-outline-primary">
